--- a/cluster-defns/rondb-data-node.yml
+++ b/cluster-defns/rondb-data-node.yml
@@ -4,5 +4,5 @@
       ip: __WORKER_IP__
     recipes:
       - ndb::ndbd
-      - hopsmonitor::node_exporter
-      - consul::slave
+  #    - hopsmonitor::node_exporter
+  #    - consul::slave
