--- a/cluster-defns/rondb-head.yml
+++ b/cluster-defns/rondb-head.yml
@@ -14,10 +14,10 @@ attrs:
     enabled: true
   kagent:
     enabled: false
-  hopsmonitor:
-    rondb: true
-  consul:
-    security: false
+#  hopsmonitor:
+#    rondb: true
+#  consul:
+#    security: false
   mysql:
     password: __PWD__
   ndb:
@@ -31,10 +31,11 @@ groups:
     baremetal:
       ip: __IP__
     recipes:
-      - ndb::mgmd
       - ndb::bench
-      - hopsmonitor::prometheus
-      - hopsmonitor::grafana
+      - ndb::mgmd
+      - ndb::mysqld
+#      - hopsmonitor::prometheus
+#      - hopsmonitor::grafana
 #      - hopsmonitor::alertmanager      
-      - consul::master      
+#      - consul::master      
       __DATABASE_NODE_HEAD__
